# artifacts/api-server/src/routes/index.ts
@@ -1,10 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import projectsRouter from "./projects";
+import userPreferencesRouter from "./userPreferences";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(projectsRouter);
+router.use(userPreferencesRouter);
 
 export default router;
